# fast-next-todo

./: .dockerignore  .gitignore  .mcp.json  CLAUDE.md  README.md  app.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json  plan.md  vercel.json
.claude/agents/: architecture-designer.md  database-manager.md  devops-deployer.md  documentation-expert.md  fastapi-backend-developer.md  frontend-developer.md  full-stack-tester.md
.claude/skills/nextjs-auth-integration/: SKILL.md
.specify/memory/: constitution.md
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt  vercel.json
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/api/: index.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: health.py  tags.py  tasks.py
backend/app/middleware/: auth.py  rate_limit.py
backend/app/models/: __init__.py  audit.py  tag.py  task.py
backend/app/repositories/: __init__.py  audit_repository.py  tag_repository.py  task_repository.py
backend/app/schemas/: __init__.py  audit.py  auth.py  tag.py  task.py
backend/app/services/: __init__.py  audit_service.py  tag_service.py  task_service.py
backend/tests/: conftest.py
frontend/: .env.example  Dockerfile  eslint.config.mjs  frontend.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vercel.json
frontend/db/: schema.sql
frontend/scripts/: apply-schema.mjs  generate-schema.mjs  test-script.mjs
frontend/src/: middleware.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: keyboard-shortcuts-help.tsx  providers.tsx  theme-provider.tsx
frontend/src/context/: filter-context.tsx
frontend/src/hooks/: index.ts  use-auth.ts  use-keyboard-shortcuts.ts  use-notifications.ts  use-tags.ts  use-task-mutations.ts  use-tasks.ts  use-toast.ts
frontend/src/lib/: api-client.ts  auth-client.ts  auth.ts  config.ts  notifications.ts  utils.ts
frontend/src/styles/: globals.css
frontend/src/types/: api.ts  audit.ts  index.ts
history/prompts/001-task-management/: 0001-create-task-management-spec.spec.prompt.md  0002-clarify-task-management-spec.spec.prompt.md  0003-implementation-plan-creation.plan.prompt.md  0004-git-commit-and-pr-creation.misc.prompt.md  0005-task-generation-for-task-management.tasks.prompt.md  0006-implement-task-management-feature.green.prompt.md  0007-implement-data-isolation.green.prompt.md  0008-implement-task-prioritization.green.prompt.md  0009-implement-task-tagging.green.prompt.md  (+3 more)
specs/001-task-management/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-dashboard-ux-enhancements/: plan.md  research.md  spec.md  tasks.md
(+330 files in other folders)
